apply plugin: 'idea'

subprojects {

    apply plugin: 'java'
    
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    
    repositories() {
        jcenter()
    }
}